2012-01-07  Kaz Kylheku  <kaz@kylheku.com>

	Version 52

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated. Wrong December dates fixed.

2012-01-06  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (fuzz_s): New symbol variable.
	(v_fuzz): New static function.
	(syms_init): fuzz_s initialized.
	(dir_tables_init): v_fuzz entered into v_directive_table.

	* txr.1: Documented @(fuzz).

2012-01-06  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_gather): Implemented until/last clause.

	* parser.y (gather_parts, additional_gather_parts): New nonterminals.
	(gather_clause): Syntax refactored for until/last clause.

	* txr.1: Updated.

2012-01-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Fix regression introduced in
	2011-12-29 commit. We can't use mod_s, because the module
	which sets up that variable is not yet initialized.

2012-01-01  Kaz Kylheku  <kaz@kylheku.com>

	Make C globals in TXR Lisp properly assignable, so that for instance
	assigning *stdout*, it really overwrites the underlying C variable.

	* eval.c (lookup_var): Handle new kind of toplevel binding.
	If the hash value is a cptr, it points to a val storage location.
	(lookup_val_l): New function.
	(op_modplace): Get location of variable using lookup_val_l
	rather than assuming there is a cons-based binding.
	(reg_var): Argument changed to val * pointer.
	Register the variable as a cptr referencing the location.
	(eval_init): reg_var calls pass address of each global.

	* eval.h (lookup_var_l): Declared.

2012-01-01  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New gensym function registered.

	* lib.c (gensym_counter): New variable.
	(gensymv): New function.
	(obj_init): Initialize gensym_counter.

	* lib.h (gensym_counter, gensymv): Declared.

2011-12-30  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (counter_k): New keyword symbol variable.
	(do_output_line): Process new :counter argument of rep.